--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,13 @@
-spring.profiles.active=test
-spring.jpa.open-in-view=true
+#Configuração Mysql
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_evacinas?createDatabaseIfNotExist=true&useSSL=true&useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=printf1310
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.format_sql=true
+
+
+
+#H2 base de dados configuration
+#spring.profiles.active=test
+#spring.jpa.open-in-view=true
